crates/polychem/src/polymers/snapshots/polychem__polymers__polymer_database__tests__parse_complete_modifications_error.snap
---
source: crates/polychem/src/polymers/polymer_database.rs
description: db.map_err(WrapErr)
expression: out
---
  × encountered an error during testing
  ╰─▶   × the target "Carboxyl" overlaps with 1 other target specifier
        help: double-check for typos, or remove the overlapping target
              specifier
      
    ╭─[test:11:9]
 10 │     Am "Amidation" {
 11 │         targeting "Carboxyl" at="Sidechain"
    ·         ──────────────────┬─────────────────
    ·                           ╰── overlaps with
 12 │         targeting "Carboxyl"
    ·         ──────────┬──────────
    ·                   ╰── this target
 13 │         lost "OH"
 14 │         gained "NH2"
    ╰────
